tests/neg/cannot-call-java-enum-constructor.scala
enum E extends java.lang.Enum[E]("name", 0) { // error
  case A, B
}
